# PhyDOSE

./: CMakeLists.txt  README.md  designBatch.sh  designBatch_test.sh
data/: scopit_comparison.csv
data/aml-cohort/: MissionBio_all.csv  amlFN.csv
data/aml-cohort/Combined/: Patient10_trees.txt  Patient13_trees.txt  Patient14_trees.txt  Patient16_trees.txt  Patient17_trees.txt  Patient20_trees.txt  Patient22_trees.txt  Patient24_trees.txt  Patient25_trees.txt  Patient26_trees.txt  Patient27_trees.txt  Patient28_trees.txt  Patient29_trees.txt  Patient2_trees.txt  Patient30_trees.txt  Patient32_trees.txt  Patient33_trees.txt  Patient34_trees.txt  Patient35_trees.txt  Patient36_trees.txt  Patient37_trees.txt  Patient38_trees.txt  Patient39_trees.txt  Patient40_trees.txt  Patient41_trees.txt  Patient42_trees.txt  Patient45_trees.txt  Patient47_trees.txt  Patient48_trees.txt  Patient4_trees.txt  Patient51_trees.txt  Patient55_trees.txt  Patient58_trees.txt  Patient59_trees.txt  Patient5_trees.txt  Patient60_trees.txt  Patient61_trees.txt  Patient62_trees.txt  Patient63_trees.txt  Patient64_trees.txt  (+12 more)
data/aml-cohort/OUTPUT/: aml_scopit_summary.csv  aml_scopit_trees.csv  raw_num_cells.csv  raw_num_cells_FN0.05.csv  summary.csv
data/example/: exampleTrees.txt
data/example/distFeats/: exampleTrees.txt_T1_DF.csv
data/example/single_cell_data/: SCS.csv
data/patient2/: Patient2_ALL.txt
data/patient2/distFeats/: Patient2_ALL.txt_T1000_DF.csv  Patient2_ALL.txt_T1004_DF.csv  Patient2_ALL.txt_T1006_DF.csv  Patient2_ALL.txt_T1007_DF.csv  Patient2_ALL.txt_T1008_DF.csv  Patient2_ALL.txt_T1009_DF.csv  Patient2_ALL.txt_T1014_DF.csv  Patient2_ALL.txt_T1016_DF.csv  Patient2_ALL.txt_T1017_DF.csv  Patient2_ALL.txt_T1018_DF.csv  Patient2_ALL.txt_T1021_DF.csv  Patient2_ALL.txt_T1022_DF.csv  Patient2_ALL.txt_T1023_DF.csv  Patient2_ALL.txt_T1024_DF.csv  Patient2_ALL.txt_T1025_DF.csv  Patient2_ALL.txt_T1026_DF.csv  Patient2_ALL.txt_T1030_DF.csv  Patient2_ALL.txt_T1031_DF.csv  Patient2_ALL.txt_T1034_DF.csv  Patient2_ALL.txt_T1036_DF.csv  Patient2_ALL.txt_T1037_DF.csv  Patient2_ALL.txt_T1041_DF.csv  Patient2_ALL.txt_T1044_DF.csv  Patient2_ALL.txt_T104_DF.csv  Patient2_ALL.txt_T1050_DF.csv  Patient2_ALL.txt_T1052_DF.csv  Patient2_ALL.txt_T1053_DF.csv  Patient2_ALL.txt_T1054_DF.csv  Patient2_ALL.txt_T1058_DF.csv  Patient2_ALL.txt_T1059_DF.csv  Patient2_ALL.txt_T1060_DF.csv  Patient2_ALL.txt_T1062_DF.csv  Patient2_ALL.txt_T1066_DF.csv  Patient2_ALL.txt_T1067_DF.csv  Patient2_ALL.txt_T1068_DF.csv  Patient2_ALL.txt_T1072_DF.csv  Patient2_ALL.txt_T1075_DF.csv  Patient2_ALL.txt_T1076_DF.csv  Patient2_ALL.txt_T1077_DF.csv  Patient2_ALL.txt_T1081_DF.csv  (+1211 more)
data/patient2/distFeats_foo/: Patient2_ALL.tsv_T1000_DF.csv  Patient2_ALL.tsv_T1001_DF.csv  Patient2_ALL.tsv_T1002_DF.csv  Patient2_ALL.tsv_T1004_DF.csv  Patient2_ALL.tsv_T1009_DF.csv  Patient2_ALL.tsv_T100_DF.csv  Patient2_ALL.tsv_T1010_DF.csv  Patient2_ALL.tsv_T1011_DF.csv  Patient2_ALL.tsv_T1012_DF.csv  Patient2_ALL.tsv_T1014_DF.csv  Patient2_ALL.tsv_T1018_DF.csv  Patient2_ALL.tsv_T1019_DF.csv  Patient2_ALL.tsv_T101_DF.csv  Patient2_ALL.tsv_T1026_DF.csv  Patient2_ALL.tsv_T1027_DF.csv  Patient2_ALL.tsv_T1028_DF.csv  Patient2_ALL.tsv_T102_DF.csv  Patient2_ALL.tsv_T1031_DF.csv  Patient2_ALL.tsv_T1032_DF.csv  Patient2_ALL.tsv_T1034_DF.csv  Patient2_ALL.tsv_T1037_DF.csv  Patient2_ALL.tsv_T1038_DF.csv  Patient2_ALL.tsv_T1039_DF.csv  Patient2_ALL.tsv_T1041_DF.csv  Patient2_ALL.tsv_T1042_DF.csv  Patient2_ALL.tsv_T1044_DF.csv  Patient2_ALL.tsv_T1045_DF.csv  Patient2_ALL.tsv_T1046_DF.csv  Patient2_ALL.tsv_T1047_DF.csv  Patient2_ALL.tsv_T1048_DF.csv  Patient2_ALL.tsv_T104_DF.csv  Patient2_ALL.tsv_T1050_DF.csv  Patient2_ALL.tsv_T1054_DF.csv  Patient2_ALL.tsv_T1055_DF.csv  Patient2_ALL.tsv_T1056_DF.csv  Patient2_ALL.tsv_T105_DF.csv  Patient2_ALL.tsv_T1060_DF.csv  Patient2_ALL.tsv_T1062_DF.csv  Patient2_ALL.tsv_T1063_DF.csv  Patient2_ALL.tsv_T1064_DF.csv  (+1276 more)
data/patient2/trees/: tree1.tsv  tree10.tsv  tree100.tsv  tree1000.tsv  tree1001.tsv  tree1002.tsv  tree1003.tsv  tree1004.tsv  tree1005.tsv  tree1006.tsv  tree1007.tsv  tree1008.tsv  tree1009.tsv  tree101.tsv  tree1010.tsv  tree1011.tsv  tree1012.tsv  tree1013.tsv  tree1014.tsv  tree1015.tsv  tree1016.tsv  tree1017.tsv  tree1018.tsv  tree1019.tsv  tree102.tsv  tree1020.tsv  tree1021.tsv  tree1022.tsv  tree1023.tsv  tree1024.tsv  tree1025.tsv  tree1026.tsv  tree1027.tsv  tree1028.tsv  tree1029.tsv  tree103.tsv  tree1030.tsv  tree1031.tsv  tree1032.tsv  tree1033.tsv  (+2527 more)
data/tracerx/CRUK0004/: CRUK0004.tsv
data/tracerx/CRUK0005/: CRUK0005.tsv
data/tracerx/CRUK0011/: CRUK0011.tsv
data/tracerx/CRUK0012/: CRUK0012.tsv
data/tracerx/CRUK0013/: CRUK0013.tsv
data/tracerx/CRUK0022/: CRUK0022.tsv
data/tracerx/CRUK0023/: CRUK0023.tsv
data/tracerx/CRUK0025/: CRUK0025.tsv
data/tracerx/CRUK0028/: CRUK0028.tsv
data/tracerx/CRUK0031/: CRUK0031.tsv
data/tracerx/CRUK0037/: CRUK0037.tsv
data/tracerx/CRUK0038/: CRUK0038.tsv
data/tracerx/CRUK0046/: CRUK0046.tsv
data/tracerx/CRUK0049/: CRUK0049.tsv
data/tracerx/CRUK0063/: CRUK0063.tsv
data/tracerx/CRUK0067/: CRUK0067.tsv
data/tracerx/CRUK0068/: CRUK0068.tsv
data/tracerx/CRUK0070/: CRUK0070.tsv
data/tracerx/CRUK0076/: CRUK0076.tsv
data/tracerx/CRUK0077/: CRUK0077.tsv
data/tracerx/CRUK0084/: CRUK0084.tsv
data/tracerx/CRUK0094/: CRUK0094.tsv
data/tracerx/CRUK0095/: CRUK0095.tsv
data/tracerx/CRUK0099/: CRUK0099.tsv
data/tracerx/CRUK0100/: CRUK0100.tsv
data/tracerx/results/: tracerx_mult_by_sample.csv  tracerx_mult_results.csv  (+2 more)
pkg/: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  README.md
pkg/R/: MultinomialUnion.R  PhyDOSE.R  ProcessFiles.R  RcppExports.R
pkg/man/: PhyDOSE-package.Rd
pkg/src/: EnumerateDF.cpp  RcppExports.cpp
src/: CMakeLists.txt  designBatch.sh
src/R/: PhyDOSE.r  PhyDOSE_Batch.r  SCS_EXP.r  multinomial_union.r  process_files.r
src/cpp/: basetree.cpp  basetree.h  clonetree.cpp  clonetree.h  inputinstance.cpp  inputinstance.h  maindesign.cpp  setcover.cpp  setcover.h  setcoverilp.cpp  setcoverilp.h  utils.h
(+158 files in other folders)
